# Physics-Simulator

./: CMakeLists.txt
src/: main.cpp
src/maths/: calculations.cpp  calculations.hpp
src/sim/Particle/: 2q2  particle.cpp  particle.hpp
src/sim/RigidBody/: \  rigidbody.cpp  rigidbody.hpp
